2002-11-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (lang_c_finish): Use $@ in the .c -> _.c rule.

	* automake.in (handle_single_transform_list): Don't strip the
	directory from $full_ansi.  This reverts my patch of 2002-10-16.
	(lang_c_finish): Use the full filename, including the directory,
	in the .c -> _.c rule.  These two files must reside in the same
	directory.
	* tests/ansi6.test: Also try to compile without ansi2knr.
	Reported by Andreas Schwab

2002-11-14  Eric Blake  <ebb9@email.byu.edu>

	* lib/am/depend2.am: Add missing fi in c.obj rules.

2002-11-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Conditional Sources): Fix the `+=' example.
	Reported by Mike Castle.

2002-11-12  Jim Meyering  <jim@meyering.net>

	Make install-sh work even when names contain spaces or
	certain (but not all) shell metachars.

	* lib/install-sh: Remove lots of unnecessary quoting.
	Add double quotes where necessary.
	Write diagnostics to stderr, not stdout.
	Normalize spacing in diagnostics: use one space (not two,
	and not a TAB) after the leading `install:'.
	Remove trailing white space.
	Remove unnecessary curly braces.
	If removing the destination fails, also try to move it aside.
	Use `trap' more portably.
	* tests/installsh2.test: New file, to test for the above fix.
	* tests/Makefile.am (TESTS): Add installsh2.test.

2002-11-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (switch_warning): Subject Perl warnings to -Werror.

	* automake.texi (Extending): Complete unterminated sentence.
	Reported by Mike Castle.

2002-10-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Dist): Fix the distcleancheck_listfiles example.
	Reported by Karl Berry.

2002-10-25  Charles Wilson  <cwilson@ece.gatech.edu>

	* tests/defs.in: Add explicit stanza for python -V.

2002-10-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump version to 1.7.1a.

	* NEWS, configure.in: Version 1.7.1.
