@@ -21,7 +21,7 @@
 # Check for subdir Texinfo.
 # PR/343
 
-required='makeinfo tex'
+required='makeinfo tex texi2dvi-o'
 . ./defs || exit 1
 
 set -e
