@@ -1,5 +1,8 @@
 2002-11-21  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/texinfo13.test: Require texi2dvi-o.
+	* tests/defs.in: Handle required=texi2dvi-o.
+
 	* automake.in (lang_c_finish): Use $@ in the .c -> _.c rule.
 
 	* automake.in (handle_single_transform_list): Don't strip the
